--- a/css/bicicletas/bicicletas-lista.css
+++ b/css/bicicletas/bicicletas-lista.css
@@ -1,3 +1,7 @@
+.bicicletas-lista{
+    margin-top: 120px;
+}
+
 .bicicletas-lista h2{
     color: var(--c-11);
     font-family: 'Poppins';
@@ -6,22 +10,16 @@
     font-size: 64px;
     line-height: 72px;
     margin-bottom: 40px;
-    margin-left: 220px;
-}
-.bicicletas-lista{
-    margin-top: 120px;
 }
 
 .lista-bicicletas{
     display: flex;
     gap: 0px 40px;
-    padding: 0px 70px 0px 70px;
-    margin: 0px 40px 0px 40px;
+    margin: 0px 20px 20px 20px;
+    justify-content: center;
 }
 
 .lista-bicicletas img{
-    width: 460px;
-    height: 400px;
     border-radius: 5px;
 }
 
