--- a/css/bicicleta/seguro.css
+++ b/css/bicicleta/seguro.css
@@ -30,7 +30,7 @@
     gap: 40px;
 }
 
-.planos-grid a{
+.plano-prata a{
     background: var(--cor-10);
     padding: 20px 30px;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
@@ -39,9 +39,10 @@
 }
 
 .plano-prata{
-    background-color: blue;
+    background-color: var(--cor-12);
     padding: 20px;
-
+    width: 560px;
+    height: 396px;
 }
 
 
@@ -79,7 +80,7 @@
 
 .flex-titulo{
     display: flex;
-    gap: 130px;
+    justify-content: space-between;
 }
 
 .valores1{
@@ -98,11 +99,14 @@
     font-size: 12px;
     line-height: 16px;
     color: var(--cor-6);
-    background-color: red;
+
 }
 
 .plano-ouro{
-    background-color: aqua;
+    background-color: var(--cor-12);
+    padding: 20px;
+    width: 560px;
+    height: 484px;
 }
 
 .plano-ouro li{
@@ -111,3 +115,30 @@
     align-items: center;
 }
 
+.plano-ouro h3{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 48px;
+    color: var(--cor-p1);
+}
+
+.botao-ouro1{
+    padding: 62px 20px;
+
+}
+
+.plano-ouro a{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 24px;
+    color: var(--cor-p5);
+
+    background: linear-gradient(180deg, #FFBF00 0%, #F2A50C 100%);
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    padding: 20px 30px;
+}
